--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
     "web3": "^1.3.6",
     "web3modal-vue": "^1.0.5"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": "8090"
+    }
+  }
 }
